cargo-features = ["edition2024"]
[package]
name = "cybergear-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
defmt = "1.0.1"
embassy-sync = "0.6.2"
embassy-time = "0.4.0"
embedded-can = "0.4.1"
nb = "1.1.0"


[dev-dependencies]
mockall = "0.13.1"
tokio = { version = "1", features = ["macros", "rt", "test-util"] }
critical-section = { version = "1.2.0", features = ["std"] }

[build-dependencies]
cc = "1.2.19"

[features]
debug-log = []